--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,8 @@
 <resources>
     <string name="app_name">callingBell</string>
+    <string name="text">number</string>
+    <string name="button2">SET</string>
+    <string name="button">CALL</string>
+    <string name="toggle_on">Turn Off...</string>
+    <string name="toggle_off">Turn On...</string>
 </resources>
